--- a/views/error.ejs
+++ b/views/error.ejs
@@ -23,7 +23,7 @@
     </nav>
     <div class="flex w-full flex-wrap-reverse items-center mt-[2vh] p-8 justify-between">
         <div class="md:w-1/2 w-full">
-            <div class="flex flex-col mt-[10vh] p-8">
+            <div class="flex flex-col md:mt-[10vh] mt-0 md:p-8 p-2 pl-0">
                 <h2 class="md:text-4xl text-2xl mb-[2vh] font-bold text-zinc-950">Page Not Found</h2>
                 <p class="md:text-lg text-base md:pr-20 pr-0 font-semibold text-zinc-600">
                     Oops! The page you're looking for doesn't exist. It might have been moved or deleted.
