--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,6 +24,7 @@
     <div class="flex w-full flex-wrap-reverse items-center mt-[2vh] p-8 justify-between">
         <div class="md:w-1/2 w-full">
             <h1 class="md:text-7xl text-4xl mb-[3vh] font-bold text-zinc-950">Join the fun of chat!</h1>
+            <p id="msgbox" class="text-red-500 my-1"></p>
             <p class="text-2xl text-zinc-700 mb-4">Pick your avatar</p>
             <div id="avatars" class="flex bg-white rounded-md shadow-sm shadow-zinc-300 flex-wrap items-center justify-center p-4 gap-3">
                 <!-- Avatars will be loaded here -->
@@ -45,7 +46,6 @@
                     Join Chat
                 </button>
             </form>
-            <p id="msgbox" class="text-red-500"></p>
         </div>
         <div class="p-4 md:w-1/2 w-full md:flex hidden justify-end">
             <img src="/images/banner.png" alt="banner">
