--- a/views/about.ejs
+++ b/views/about.ejs
@@ -60,6 +60,9 @@
     <div class="md:p-12 md:py-0 p-4 py-0">
         <button class="md:text-base bg-red-500 flex items-center rounded-md hover:bg-red-400 transition duration-200 ease-in-out px-4 py-2 text-base mt-2 mb-2 font-bold text-white" id="feedbackBtn">See Feedbacks</button>
         <div class="hidden flex-wrap gap-4 pb-4 items-center" id="feedbackBox">
+            <% if (feedbacks.length === 0) { %>
+                <h3 class="text-xl font-semibold text-zinc-700">No feedbacks yet</h3>
+            <% } %>
             <% feedbacks.forEach(feedback => { %>     
                 <div class="flex gap-2 items-start md:min-h-[22vh] min-h-[15vh] overflow-hidden bg-zinc-100 md:w-[20vw] w-full rounded-md p-3 shadow-md shadow-zinc-400">
                     <img src="/images/avatars/avatar<%= Math.floor(Math.random()*12) %>.jpg" class="h-10  rounded-full" alt="avatar">
